체인지로그 250708 참고